--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,43 @@
 body {
   font-size: 16px;
 }
+
+
+.data{
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  margin:auto;
+  gap:1em;
+
+}
+
+.avatar{
+  height:5em;
+  width:10em;
+}
+
+.continer{
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  margin:auto;
+  gap:1em;
+}
+
+
+.data{
+  display:flex;
+  border:1px solid black;
+  width:40%;
+  border-radius:10px;
+
+}
+
+.nameAvatar{
+  display:flex;
+
+}
+
