--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -41,3 +41,11 @@ body {
 
 }
 
+
+.cardData{
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap:15em;
+  margin:auto;
+}
